--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ scipy = "^1.6.1"
 Pillow = "^8.1.0"
 cv = "^1.0.0"
 jupyter = "^1.0.0"
+imageio = "^2.9.0"
+scikit-image = "^0.18.1"
+opencv-python = "^4.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
