--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
 max-line-length = 90
-ignore = E203, E501, W503, B950
+ignore = E203, E501, W503, B950, C901
 max-complexity = 12
 select = B, C, E, F, W, B9
