--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ jupyter = "^1.0.0"
 imageio = "^2.9.0"
 scikit-image = "^0.18.1"
 opencv-python = "^4.5.1"
+mmcv = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
