--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ imageio = "^2.9.0"
 scikit-image = "^0.18.1"
 opencv-python = "^4.5.1"
 mmcv = "^1.3.0"
+xlrd = "^2.0.1"
+openpyxl = "^3.0.7"
+tensorboardX = "^2.2"
+h5py = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
