--- a/networks/dorn/config/dorn_kitti.yaml
+++ b/networks/dorn/config/dorn_kitti.yaml
@@ -8,7 +8,7 @@ model:
     ord_num: 90
     gamma: -0.97
     beta: 90.0
-    input_size: [385, 513]
+    input_size: [352, 470]
     kernel_size: 16
     pyramid: [8, 12, 16]
     batch_norm: False
@@ -17,13 +17,13 @@ model:
 data:
   name: "Kitti"
   split: ["trainval", "selected_val"]
-  path: '/data/wangxin/KITTI'
-  tr_crop_size: [385, 513]
-  te_crop_size: [385, 513]
+  path: '/media/data/datasets/penitto/kitti'
+  tr_crop_size: [352, 470]
+  te_crop_size: [352, 470]
   norm_type: "imagenet-norm"
 solver:
   epochs: 14
-  batch_size: 4
+  batch_size: 2
   step_decay: 1
   optimizer:
     name: 'SGD'
@@ -36,12 +36,12 @@ solver:
     params:
       gamma: 0.9
       n_iteration: 300636
-apex:
-  amp_used: False
-  opt_level: "O1"
-  keep_batchnorm_fp32:
-  loss_scale:
+# apex:
+#   amp_used: False
+#   opt_level: "O1"
+#   keep_batchnorm_fp32:
+#   loss_scale:
 vis_config:
   name: "dorn"
 snap:
-  path: "/data/snap_dir/monodepth"
+  path: "/home/penitto/mono_depth/networks/dorn/snaps"
