--- a/networks/dorn/config/drn.yaml
+++ b/networks/dorn/config/drn.yaml
@@ -3,7 +3,7 @@ environ:
   deterministic: False
 model:
   name: "dorn"
-  pretrained_model:
+  pretrained_model: "/home/penitto/mono_depth/networks/dorn/pretrained/resnet/resnet.pth"
   params:
     ord_num: 90
     gamma: -0.97
@@ -17,7 +17,7 @@ model:
 data:
   name: "Kitti"
   split: ["trainval", "selected_val"]
-  path: '/data/wangxin/KITTI'
+  path: '/media/data/datasets/penitto/kitti'
   tr_crop_size: [385, 513]
   te_crop_size: [385, 513]
   imagenet_normalize: True
